Fix broken integration tests

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,6 +40,7 @@ body {
 main {
   width: 400px;
   background-color: var(--white);
+  overflow-y: scroll;
 }
 
 .heading {
